<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".validarpin">

    <Button
        android:id="@+id/validar"
        android:layout_width="210dp"
        android:layout_height="51dp"
        android:backgroundTint="#651919"
        android:text="@string/validar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="134dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946"
        app:srcCompat="@drawable/login" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar6"
        android:layout_width="432dp"
        android:layout_height="16dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="#300A0A"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Código Generado:"
        android:textColor="#510C0C"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <EditText
        android:id="@+id/numAleatorio"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:background="@color/design_default_color_secondary"
        android:backgroundTint="#000000"
        android:ems="4"
        android:focusable="false"
        android:inputType="number"
        android:shadowColor="#C33333"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#D65050"
        android:textColorHint="#1E6E15"
        android:textColorLink="#48AF62"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.288" />

    <TextView
        android:id="@+id/cuentaregresiva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuentaregresiva"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <EditText
        android:id="@+id/campoPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7A1717"
        android:ems="10"
        android:hint="Digitar Pin"
        android:inputType="number"
        android:maxLength="5"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#B86D6D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641" />

    <TextView
        android:id="@+id/digitarPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digitarPin"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar7"
        android:layout_width="66dp"
        android:layout_height="14dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="#5E1010"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar8"
        android:layout_width="66dp"
        android:layout_height="14dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="#5E1010"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />
</androidx.constraintlayout.widget.ConstraintLayout>